@@ -2,6 +2,19 @@
 <object name="portal_actions" meta_type="Plone Actions Tool"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <object name="object_buttons" meta_type="CMF Action Category">
+  <object name="regen_pdf" meta_type="CMF Action" i18n:domain="minaraad.projects">
+    <property name="title" i18n:translate="">Regenerate PDF</property>
+   <property name="description" i18n:translate=""></property>
+   <property
+      name="url_expr">string:${globals_view/getCurrentObjectUrl}/generate_pdf</property>
+   <property name="icon_expr"></property>
+   <property name="available_expr">python: object.portal_type == 'Meeting'</property>
+   <property name="permissions">
+    <element value="View"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+
   <object name="create_advisory" meta_type="CMF Action" i18n:domain="minaraad.projects">
    <property name="title" i18n:translate="">Create Advisory</property>
    <property name="description" i18n:translate="">Create advisory from information in project</property>
